--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -37,22 +37,64 @@ header span{
 }
 
 .banner{
+    position: relative;
     width: 20rem;
-    padding-top: 9rem;
     font-family: Helvetica;
     font-weight: bold;
     color: white;
     background-color: darkslategray;
+    top: 9rem;
+    
 }
 
 .banner h3{
     font-size: 1rem;
-    padding-top: 2rem 0rem 0.25rem 3rem;
+    padding: 2rem 0rem 0.25rem 3rem;
+    
 }
 
-.banner h1{
-    font-size: 2rem;
-    margin-left: 3rem;
+.banner h2{
+    font-size: 1.5rem;
+    padding: 0rem 0rem 2rem 3rem;
 }
+
+ul{
+    display: flex;
+        justify-content: space-around;
+        padding: 0.75rem 0rem;
+}
+
+nav{
+    background-color: firebrick;
+}
+
+ul a{
+    font-family: Helvetica;
+    color: white;
+    text-decoration: none;
+}
+
+
+.box{
+    width: 30%;
+}
+
+.pen{
+    height: 9rem;
+    background-image: url(../pen.png);
+    background-size: cover;
+}
+
+/*
+.watch{
+    background-image: url(../watch.png);
+}
+
+.glasses{
+    background-image: url(../glasses.png);
+}
+
+*/
+
 
 
