--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -74,27 +74,63 @@ ul a{
     text-decoration: none;
 }
 
+.white-box{
+    display: flex;
+
+    
+    
+}
 
 .box{
+    display: flex;
+    position:relative;
     width: 30%;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3em;
+    border: 4px solid darkslategray;
 }
 
 .pen{
     height: 9rem;
     background-image: url(../pen.png);
     background-size: cover;
+    width: 9rem;
+    margin: 2rem 0rem; 
+    
 }
 
-/*
 .watch{
+    height: 9rem;
     background-image: url(../watch.png);
+    background-size: cover;
+    width: 9rem;
+    margin: 2rem 0rem; 
+    
 }
 
 .glasses{
+    height: 9rem;
     background-image: url(../glasses.png);
+    background-size:cover;
+    width: 9rem;
+    margin: 2rem 0rem; 
+    
 }
 
-*/
+
+.box h6{
+    background-color: darkslategray;
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-family: Helvetica;
+    padding: 0.5rem 0rem;
+}
+
+
+
+
 
 
 
