--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -81,6 +81,11 @@ ul a{
     
 }
 
+.products {
+    display: flex;
+    justify-content: space-between;
+}
+
 .box{
     display: flex;
     position:relative;
