--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -7,7 +7,7 @@ html {
     margin: 0 auto ;
 }
 header{
-    background-color: darkslategray;
+    background-color: #263238;
     font-family: Helvetica;
     font-size: 1rem;
     color: white;
@@ -119,7 +119,6 @@ ul a{
     background-size:cover;
     width: 9rem;
     margin: 2rem 0rem; 
-    
 }
 
 
@@ -134,8 +133,28 @@ ul a{
 
 
 .glasses img {
-      max-width: 8em;
+    max-width: 8em;
 }
+
+.combined{
+    display: flex;
+    justify-content: space-around;
+}
+
+footer{
+    height: 5rem;
+    background-color:  darkslategray;
+    margin-top: 4rem;
+    
+}
+
+footer p{
+    color: white;
+    text-align: left;
+}
+
+
+
 
 
 
